# trust-china-dns

./: Cargo.toml  README.md  bypass-china.acl
src/: acl.rs  lib.rs  main.rs  socks5.rs
