[package]
name = "trust-china-dns"
version = "0.1.0"
authors = ["Max Lv <max.c.lv@gmail.com>"]
repository = "https://github.com/madeye/trust-china-dns"
license = "MIT"
edition = "2018"

[[bin]]
name = "trust-china-dns"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2.7", features = ["full"] }
iprange = "0.6"
ipnet = "2.2"
bytes = "0.5"
regex = "1"
futures = "0.3"
clap = "2.33"
